--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,15 @@
 @font-face {
-    font-family: animales_fantastic;
+    font-family: "animales_fantastic";
     src: url("../fontface/animales_fantastic.otf") format("opentype");
+}
+
+body{
+    background-color: black;
+}
+.title{
+    font-family: "animales_fantastic", "Times New Roman",sans-serif;
+    color: #e99548;
+    text-align: center;
+    margin-top: 50px;
+    h1
 }
