--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,15 @@ body{
     font-family: "animales_fantastic", "Times New Roman",sans-serif;
     color: #e99548;
     text-align: center;
-    margin-top: 50px;
-    h1
+    margin-top: 0px;
+    font-size: 40px;
+    margin-bottom: 0px;
+}
+
+#fantastic{
+    margin-top: 0;
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
